fix title overflow

--- a/frontend/src/PhotoElement.css
+++ b/frontend/src/PhotoElement.css
@@ -49,6 +49,7 @@
 }
 .PhotoElement .header > div {
   width: calc(50vw - 7rem);
+  max-width: calc(50vw - 7rem);
   text-overflow: ellipsis;
   flex-grow: 1;
 }
@@ -57,24 +58,26 @@
   white-space: nowrap;
   display: flex;
   align-items: flex-end;
+  overflow: hidden;
   text-align: right;
   flex-direction: column;
 }
 .PhotoElement .header .headerTitle h1 {
   color: var(--photoelement-heading-color);
+  width: calc(50vw - 7rem);
+  max-width: calc(50vw - 7rem);
   font-size: 2.25rem;
   white-space: nowrap;
   text-overflow: ellipsis;
   margin: 0.25rem 0;
   font-family: var(--condensed-font);
 }
-.PhotoElement .header .headerTitle .date {
+.PhotoElement .header .headerTitle p.date {
   font-size: 66%;
   font-weight: bold;
   text-transform: uppercase;
   margin-top: -0.5rem;
-  opacity: 0.6;
-  color: var(--breadcrumb-color);
+  color: var(--photoelement-date-color);
 }
 .PhotoElement .header .headerElems {
   border-left: 2px solid var(--shadow-color);
